quote - manual shipping total added, final fixes.

--- a/VirtoCommerce.QuoteModule.Web/Scripts/blades/quote-detail.tpl.html
+++ b/VirtoCommerce.QuoteModule.Web/Scripts/blades/quote-detail.tpl.html
@@ -134,7 +134,10 @@
                     </div>
                     <div class="column">
                         <div class="form-group">
-
+                            <label class="form-label">Manual shipping total, {{blade.currentEntity.currency}}</label>
+                            <div class="form-input">
+                                <input money ng-model="blade.currentEntity.manualShippingTotal" ng-change="blade.recalculate()">
+                            </div>
                         </div>
                     </div>
                 </div>
