--- a/VirtoCommerce.QuoteModule.Web/Scripts/widgets/quote-totals-widget.tpl.html
+++ b/VirtoCommerce.QuoteModule.Web/Scripts/widgets/quote-totals-widget.tpl.html
@@ -1,4 +1,4 @@
-﻿<ul class="list __prices" ng-click="openBlade()">
+﻿<ul class="list __prices" ng-click="blade.openItemsBlade()">
     <li class="list-item">Sub Total <span class="list-price">{{blade.currentEntity.totals.subTotalExlTax | number:2}}</span></li>
     <li class="list-item">Shipping <span class="list-price">{{blade.currentEntity.totals.shippingTotal | number:2}}</span></li>
     <li class="list-item">Discount <span class="list-price">{{blade.currentEntity.totals.discountTotal | number:2}}</span></li>
