--- a/VirtoCommerce.QuoteModule.Web/Scripts/blades/quote-items.tpl.html
+++ b/VirtoCommerce.QuoteModule.Web/Scripts/blades/quote-items.tpl.html
@@ -89,7 +89,7 @@
                             <td class="table-col">
                                 <a class="list-link" ng-click="addProposalTier(data)">Add</a>
                                 <div ng-repeat="p in data.proposalPrices | orderBy:['quantity','price']" class="form-input __mini __number">
-                                    <input va-number required ng-model="p.quantity" min="1" step="1" ng-change="recalculate()">
+                                    <input smart-float num-type="integer" required ng-model="p.quantity" ng-change="recalculate()">
                                 </div>
                                 <!--<div ng-repeat="p in data.proposalPrices | orderBy:['quantity','price']" style="height: 34px;">
                                     <span>{{p.quantity}}</span>
